[package]
name = "jellyfin-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus_exporter = "0.8.5"
clap = { version = "4.5.28", features = ["usage", "derive", "env", "color", "suggestions", "unicode", "wrap_help", "error-context", ] }
url = "2.5.4"
log = "0.4.26"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
field_accessor = "0.5.2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"